添加日子换行

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.logger.org.hibernate.SQL=OFF
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=[%p][%m] \t DateTime:%d{yyyy-MM-dd HH\:mm\:ss,SSS} \t Class:[%c]
+log4j.appender.Console.layout.ConversionPattern=[%p][%m] \t DateTime\:%d{yyyy-MM-dd HH\:mm\:ss,SSS} \t Class\:[%c]%n
 
 #ALL Record
 log4j.appender.all = org.apache.log4j.RollingFileAppender
